...
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            MenuContent(
                descrEquip = "2200 - TRATOR",
                itemMenuModelList = listOf(
                    ItemMenuModel(
                        id = 1,
                        title = "TRABALHANDO"
                    ),
                    ItemMenuModel(
                        id = 2,
                        title = "PARADO"
                    ),
                ),
                flagAccess = false,
                flagDialog = false,
                setCloseDialog = {},
                modifier = Modifier.padding(innerPadding)
...
